--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "watch": "tsc -w"
   },
   "devDependencies": {
-    "@types/node": "^12.11.7",
-    "typescript": "^3.6.4"
-  },
-  "dependencies": {
-    "typed-emitter": "^0.2.0"
+    "@types/node": "^18.0.0",
+    "typed-emitter": "^2.1.0",
+    "typescript": "^4.7.4"
   }
 }
