--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create an outbound stream over a message transport",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "/dist/index.js",
     "/dist/index.d.ts"
