--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["es2017"],
-    "target": "es2017",
-    "module": "commonjs",
+    "lib": ["ES2020"],
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
     "declaration": true,
