--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "typed-emitter": "^2.1.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "typed-emitter": "^2.1.0"
   }
 }
