package: Add keywords for PackageManager discovery

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "frida-remote-stream",
   "version": "6.0.2",
   "description": "Create an outbound stream over a message transport",
+  "keywords": [
+    "frida-gum"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
